test/fail/object-creation-generic.app
//Object creation syntax is not allowed for generic types

application test

  define page root(){}
  
  test one {
    var a := Set<String>{};
  }
